--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "first-project-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p $PORT",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "yarn": "^1.22.19"
-  }
+   "name": "first-project-nextjs",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start -p $PORT",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@next/font": "13.1.6",
+      "eslint": "8.33.0",
+      "eslint-config-next": "13.1.6",
+      "next": "13.1.6",
+      "react": "18.2.0",
+      "react-dom": "18.2.0",
+      "yarn": "^1.22.19"
+   },
+   "devDependencies": {
+      "@types/node": "^18.14.3",
+      "@types/react": "^18.0.28",
+      "typescript": "^4.9.5"
+   }
 }
